--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ data-start : the starting position in seconds
 data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )
 
 -->
-<div class="home2 video_bg" data-video="SaA_cs4WZHM" data-start="13" data-alt="images/home2-bg.jpg">
+<div class="home2 video_bg" data-video="f7Eld15vlvY" data-start="13" data-alt="images/home2-bg.jpg">
 
 
      <!-- White overlay ( feel free to remove ) -->
