added assets and started major css overhaul

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Title -->
-<title>ELASTIC | Outstanding Minimal Theme for Creatives</title>
+<title>Poptik | The future of print</title>
 
 <!-- Character set -->
 <meta charset="UTF-8">
@@ -61,7 +61,7 @@
                <!-- Image Logo ( don't forget to comment out the text logo if you activated this one! ) -->
                <div class="image-logo">
                     <a href="">
-                       <img src="images/poptik-logo-1.png" alt="Elastic" />
+                       <img src="images/poptik-logo-600.png" alt="Elastic" />
                     </a>
                </div>
 
