changed intrigue p to single p tag

--- a/index.html
+++ b/index.html
@@ -303,15 +303,8 @@ data-alt : the url of the image that will be shown as background of the homepage
                     <div class="block-text mrgn-bottom30" data-animation="true" data-animation-style="zoomIn">
                       <p>
                         Poptik has no aesthetic peer. This is powerful leverage for Poptik and for the brands we work with to introduce this
-                        technology on the market.
-                      </p>
-                      <p>
-                        Not to mention, we are only introducing Poptik to an extremely select list of millennial facing, vertical leading brands.
-                      </p>
-                      <p>
+                        technology on the market. Not to mention, we are only introducing Poptik to an extremely select list of millennial facing, vertical leading brands.
                         Patented, exclusive, Poptik is a powerful anti-counterfeit measure brands can use to protect product authenticity
-                      </p>
-                      <p>
                         Poptik is so thin and so versatile, the applications for this technology are almost endless. But here’s where we see it now:
                       </p>
                       <p>
