added new image to MAGIC section along with changing of positioning, font color and font family

--- a/index.html
+++ b/index.html
@@ -222,37 +222,28 @@ data-alt : the url of the image that will be shown as background of the homepage
 
      <!-- Contents -->
      <div class="about-contents" data-animation="true" data-animation-style="fadeIn">
-
-          <h2>MAGIC</h2>
+          <div class="magic-header">
+            <h2>MAGIC</h2>
+          </div>
           <div class="magic-paragraph">
             <p>
               Poptik is a Sub Optic technology, a branding agency and a manufacturer.
             </p>
             <p>
-              We are the conjurers of Illusion.
-            </p>
-            <p>
+              We are the conjurers of Illusion.<br />
               Poptik features depth effects that hover above or drop below the print with colorshift features and smooth motion graphics, creating
               a jaw dropping visual impact so persuasive, that it literally affects a consumer’s purchasing decision at the point of sale.
             </p>
             <p>
-              We are leveraging lenses to appeal to the eye and foil the brain with optical illusion. Some of our favorite effects include:
+              We are leveraging lenses to appeal to the eye and foil the brain with optical illusion.
             </p>
           </div>
-          <p>
-            <div class="dot-pink"></div>Passive<br />
-            <div class="dot-pink"></div>Agressive<br />
-            <div class="dot-pink"></div>Color Shift<br />
-            <div class="dot-pink"></div>Hide and Seek<br />
-            <div class="dot-pink"></div>Fluid Motion<br />
-            <div class="dot-pink"></div>Shimmer<br />
-          </p>
 
      </div>
 
      <!-- Image -->
      <div class="about-image" data-animation="true" data-animation-style="fadeInRight">
-          <img src="images/about-wow.png" alt="" />
+          <img src="images/photo-consumer-hand-wow.jpg" alt="" />
      </div>
 
 </div>
@@ -315,7 +306,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                         Cards (rewards, credit, gift)<br />
                         Labeling<br />
                         Direct Marketing<br />
-                        Point of Sale]<br />
+                        Point of Sale<br />
                       </p>
 
                     </div>
