footer and pokadots now match client comps

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ data-alt : the url of the image that will be shown as background of the homepage
 
 </div>
     <!--- class for the pokadots to show --->
-    <div class="dotsvg">
+
      <!-- Block Title -->
      <h2 class="block-title">POPIKATE IT</h2>
 
@@ -423,7 +423,7 @@ data-alt : the url of the image that will be shown as background of the homepage
 </div>
 
 <!--- class for the pokadots to show --->
-<div class="dotsvg">
+<div class="dotsvg"></div>
 <!-- FOOTER -->
 <div class="footer black-footer" data-animation="true" data-animation-style="slideUP">
 
