added in parallax section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ data-start : the starting position in seconds
 data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )
 
 -->
-<div class="home2 video_bg" data-video="f7Eld15vlvY" data-start="13" data-alt="images/home2-bg.jpg">
+<div class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/home2-bg.jpg">
 
 
      <!-- White overlay ( feel free to remove ) -->
@@ -113,7 +113,7 @@ data-alt : the url of the image that will be shown as background of the homepage
           <div class="cta-container">
                <!-- <a href="#about" class="scroll">See the Magic</a> -->
                <!-- Trigger/Open The Modal -->
-            <a id="myBtn">See the Magic</a>
+            <a id="myBtn">Discover the Magic</a>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -282,6 +282,12 @@ data-alt : the url of the image that will be shown as background of the homepage
                </div>
           </div>
 
+          <!-- PARALLAX SECTION -->
+            <div class="seperator">
+            <div class="bg">
+            <img src="images/photo-yeah-like-3d.jpg" />
+            </div>
+            </div>
           <!-- Intrigue Section -->
 
           <div class="home-block first-after-home" id="intrigue">
