added responsive work

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ data-alt : the url of the image that will be shown as background of the homepage
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">x</span>
-                <img src="images/beats.gif" />
+                <iframe width="500" height="350"
+                src="https://www.youtube.com/embed/QCouefz6RbY">
+                </iframe>
               </div>
 
             </div>
