--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ data-alt : the url of the image that will be shown as background of the homepage
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">x</span>
-                <img src="images/beats.gif" />
+                <iframe width="420" height="315"
+                  src="https://www.youtube.com/embed?v=QCouefz6RbY">
+                </iframe>
               </div>
 
             </div>
@@ -227,15 +229,7 @@ data-alt : the url of the image that will be shown as background of the homepage
           </div>
           <div class="magic-paragraph">
             <p>
-              Poptik is a Sub Optic technology, a branding agency and a manufacturer.
-            </p>
-            <p>
-              We are the conjurers of Illusion.<br />
-              Poptik features depth effects that hover above or drop below the print with colorshift features and smooth motion graphics, creating
-              a jaw dropping visual impact so persuasive, that it literally affects a consumer’s purchasing decision at the point of sale.
-            </p>
-            <p>
-              We are leveraging lenses to appeal to the eye and foil the brain with optical illusion.
+              Poptik features depth effects that hover above or drop below the print with colorshift features and smooth motion graphics, creating a jaw dropping visual impact so persuasive, that it literally affects a consumer’s purchasing decision at the point of sale.
             </p>
           </div>
 
