finished responsive work and updated change request wording

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@ data-alt : the url of the image that will be shown as background of the homepage
      <div class="welcome">
           <!-- Big Headline -->
           <div class="big-headline">
-               <h1>The future of print</h1>
+               <h1>DISRUPT THE SHELF</h1>
           </div>
 
           <!-- CTA Button -->
           <div class="cta-container">
                <!-- <a href="#about" class="scroll">See the Magic</a> -->
                <!-- Trigger/Open The Modal -->
-            <a id="myBtn">Discover the Magic</a>
+            <a id="myBtn">SUBOPTIC PRINT</a>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -290,21 +290,18 @@ data-alt : the url of the image that will be shown as background of the homepage
             <img src="images/photo-yeah-like-3d.jpg" />
             </div>
             </div>
-          <!-- Intrigue Section -->
+          <!-- EXCLUSIVE Section -->
 
-          <div class="home-block first-after-home" id="intrigue">
+          <div class="home-block first-after-home" id="exclusive">
                <div class="block-contents">
 
                     <!-- Block Title -->
-                    <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">INTRIGUE</h2>
+                    <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">EXCLUSIVE</h2>
 
-                    <!-- INTRIGUE Text -->
+                    <!-- EXCLUSIVE Text -->
                     <div class="block-text mrgn-bottom30" data-animation="true" data-animation-style="zoomIn">
                       <p>
-                        Poptik has no aesthetic peer. This is powerful leverage for Poptik and for the brands we work with to introduce this
-                        technology on the market. Not to mention, we are only introducing Poptik to an extremely select list of millennial facing, vertical leading brands.
-                        Patented, exclusive, Poptik is a powerful anti-counterfeit measure brands can use to protect product authenticity
-                        Poptik is so thin and so versatile, the applications for this technology are almost endless. But here’s where we see it now:
+                      Poptik is a “first to market” aesthetic that consumers have never seen…ever.  It is only being made available to an exclusive list of vertical leading, millennial-facing brands.  But the applications are vast:
                       </p>
                       <p>
                         CPG<br />
@@ -332,7 +329,8 @@ data-alt : the url of the image that will be shown as background of the homepage
     <!--- class for the pokadots to show --->
 
      <!-- Block Title -->
-     <h2 class="block-title">POPIKATE IT</h2>
+     <h2 class="block-title">Make You Pop</h2>
+     <p class="contact-intro">Contact us to begin a discussion about accessing Poptik for your brand</p>
 
      <!-- Buttons -->
      <div class="show-elements">
@@ -467,8 +465,8 @@ data-alt : the url of the image that will be shown as background of the homepage
               <li><a href="#services" class="scroll">POPTIK</a></li>
               <li><a href="#magic" class="scroll">MAGIC</a></li>
               <li><a href="#pop" class="scroll">POP</a></li>
-              <li><a href="#intrigue" class="scroll">INTRIGUE</a></li>
-              <li><a href="#contact" class="scroll">POPIKATE IT</a></li>
+              <li><a href="#exclusive" class="scroll">EXCLUSIVE</a></li>
+              <li><a href="#contact" class="scroll">MAKE IT POP</a></li>
           </ul>
      </div>
 
