added favs sections now known as devices as requested by client

--- a/index.html
+++ b/index.html
@@ -159,56 +159,93 @@ data-alt : the url of the image that will be shown as background of the homepage
 
 <!-- Kept Service Icons in just in case. -->
           <!-- Service Icons -->
-          <!-- <div class="service-grids4">
-               <div class="services-wrapper"> -->
+          <div class="service-grids4">
+               <div class="services-wrapper">
+                <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">DEVICES</h2>
 
                      <!-- Service -->
-                     <!-- <div class="service" data-animation="true" data-animation-style="zoomIn">
+                     <div class="service" data-animation="true" data-animation-style="zoomIn">
                           <a href="ajax_contents/services/webdesign.htm" class="load-service">
                              <div class="service-inner">
                                   <div class="service-image-icon">
                                        <img src="images/service_icons/webdesign.png" alt="" />
                                   </div>
-                                  <h4>WEBDESIGN</h4>
+                                  <h4>PASSIVE</h4>
                              </div>
                           </a>
-                     </div> -->
+                     </div>
 
                      <!-- Service -->
-                     <!-- <div class="service" data-animation="true" data-animation-style="zoomIn">
+                     <div class="service" data-animation="true" data-animation-style="zoomIn">
                           <a href="ajax_contents/services/printdesign.htm" class="load-service">
                              <div class="service-inner">
                                   <div class="service-image-icon">
                                        <img src="images/service_icons/printdesign.png" alt="" />
                                   </div>
-                                  <h4>PRINT DESIGN</h4>
+                                  <h4>AGGRESSIVE</h4>
                              </div>
                           </a>
-                     </div> -->
+                     </div>
 
                      <!-- Service -->
-                     <!-- <div class="service" data-animation="true" data-animation-style="zoomIn">
+                     <div class="service" data-animation="true" data-animation-style="zoomIn">
                           <a href="ajax_contents/services/photography.htm" class="load-service">
                              <div class="service-inner">
                                   <div class="service-image-icon">
                                        <img src="images/service_icons/photography.png" alt="" />
                                   </div>
-                                  <h4>PHOTOGRAPHY</h4>
+                                  <h4>COLOR SHIFT</h4>
                              </div>
                           </a>
-                     </div> -->
+                     </div>
 
                      <!-- Service -->
-                     <!-- <div class="service" data-animation="true" data-animation-style="zoomIn">
+                     <div class="service" data-animation="true" data-animation-style="zoomIn">
                           <a href="ajax_contents/services/motionpictures.htm" class="load-service">
                              <div class="service-inner">
                                   <div class="service-image-icon">
                                        <img src="images/service_icons/motionpicture.png" alt="" />
                                   </div>
-                                  <h4>MOTION PICTURES</h4>
+                                  <h4>HIDE and SEEK</h4>
                              </div>
                           </a>
-                     </div> -->
+                     </div>
+
+                     <!--Services -->
+                     <div class="service" data-animation="true" data-animation-style="zoomIn">
+                     <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+                        <div class="service-inner">
+                             <div class="service-image-icon">
+                                  <img src="images/service_icons/motionpicture.png" alt="" />
+                             </div>
+                             <h4>FLUID MOTION</h4>
+                        </div>
+                     </a>
+                </div>
+
+                <!--SERVICES-->
+                <div class="service" data-animation="true" data-animation-style="zoomIn">
+                <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+                   <div class="service-inner">
+                        <div class="service-image-icon">
+                             <img src="images/service_icons/motionpicture.png" alt="" />
+                        </div>
+                        <h4>SHIMMER</h4>
+                   </div>
+                </a>
+           </div>
+
+           <!--SERVICES-->
+           <div class="service" data-animation="true" data-animation-style="zoomIn">
+           <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+              <div class="service-inner">
+                   <div class="service-image-icon">
+                        <img src="images/service_icons/motionpicture.png" alt="" />
+                   </div>
+                   <h4>ZOOM</h4>
+              </div>
+           </a>
+      </div>
 
                <div class="clear"></div>
                </div>
@@ -242,6 +279,7 @@ data-alt : the url of the image that will be shown as background of the homepage
 
 </div>
 <!-- END: ABOUT BLOCK -->
+
 
 <!-- POP Section -->
 
