took out links and icons from devices section

--- a/index.html
+++ b/index.html
@@ -159,92 +159,86 @@ data-alt : the url of the image that will be shown as background of the homepage
 
 <!-- Kept Service Icons in just in case. -->
           <!-- Service Icons -->
+          <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">DEVICES</h2>
           <div class="service-grids4">
                <div class="services-wrapper">
-                <h2 class="block-title" data-animation="true" data-animation-style="zoomIn">DEVICES</h2>
+
 
                      <!-- Service -->
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
-                          <a href="ajax_contents/services/webdesign.htm" class="load-service">
+                          <!-- <a href="ajax_contents/services/webdesign.htm" class="load-service"> -->
                              <div class="service-inner">
-                                  <div class="service-image-icon">
+                                  <!-- <div class="service-image-icon">
                                        <img src="images/service_icons/webdesign.png" alt="" />
-                                  </div>
+                                  </div> -->
                                   <h4>PASSIVE</h4>
                              </div>
-                          </a>
                      </div>
 
                      <!-- Service -->
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
-                          <a href="ajax_contents/services/printdesign.htm" class="load-service">
+                          <!-- <a href="ajax_contents/services/printdesign.htm" class="load-service"> -->
                              <div class="service-inner">
-                                  <div class="service-image-icon">
+                                  <!-- <div class="service-image-icon">
                                        <img src="images/service_icons/printdesign.png" alt="" />
-                                  </div>
+                                  </div> -->
                                   <h4>AGGRESSIVE</h4>
                              </div>
-                          </a>
                      </div>
 
                      <!-- Service -->
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
-                          <a href="ajax_contents/services/photography.htm" class="load-service">
+                          <!-- <a href="ajax_contents/services/photography.htm" class="load-service"> -->
                              <div class="service-inner">
-                                  <div class="service-image-icon">
+                                  <!-- <div class="service-image-icon">
                                        <img src="images/service_icons/photography.png" alt="" />
-                                  </div>
+                                  </div> -->
                                   <h4>COLOR SHIFT</h4>
                              </div>
-                          </a>
                      </div>
 
                      <!-- Service -->
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
-                          <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+                          <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
                              <div class="service-inner">
-                                  <div class="service-image-icon">
+                                  <!-- <div class="service-image-icon">
                                        <img src="images/service_icons/motionpicture.png" alt="" />
-                                  </div>
+                                  </div> -->
                                   <h4>HIDE and SEEK</h4>
                              </div>
-                          </a>
                      </div>
 
                      <!--Services -->
                      <div class="service" data-animation="true" data-animation-style="zoomIn">
-                     <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+                     <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
                         <div class="service-inner">
-                             <div class="service-image-icon">
+                             <!-- <div class="service-image-icon">
                                   <img src="images/service_icons/motionpicture.png" alt="" />
-                             </div>
+                             </div> -->
                              <h4>FLUID MOTION</h4>
                         </div>
-                     </a>
                 </div>
 
                 <!--SERVICES-->
                 <div class="service" data-animation="true" data-animation-style="zoomIn">
-                <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+                <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
                    <div class="service-inner">
-                        <div class="service-image-icon">
+                        <!-- <div class="service-image-icon">
                              <img src="images/service_icons/motionpicture.png" alt="" />
-                        </div>
+                        </div> -->
                         <h4>SHIMMER</h4>
                    </div>
-                </a>
            </div>
 
            <!--SERVICES-->
            <div class="service" data-animation="true" data-animation-style="zoomIn">
-           <a href="ajax_contents/services/motionpictures.htm" class="load-service">
+           <!-- <a href="ajax_contents/services/motionpictures.htm" class="load-service"> -->
               <div class="service-inner">
-                   <div class="service-image-icon">
+                   <!-- <div class="service-image-icon">
                         <img src="images/service_icons/motionpicture.png" alt="" />
-                   </div>
+                   </div> -->
                    <h4>ZOOM</h4>
               </div>
-           </a>
       </div>
 
                <div class="clear"></div>
