list items in exclusive section lay out update

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                                   <!-- <div class="service-image-icon">
                                        <img src="images/service_icons/motionpicture.png" alt="" />
                                   </div> -->
-                                  <h4>HIDE and SEEK</h4>
+                                  <h4>HIDE &amp; SEEK</h4>
                              </div>
                      </div>
 
@@ -327,17 +327,24 @@ data-alt : the url of the image that will be shown as background of the homepage
                       <p>
                       Poptik is a “first to market” aesthetic that consumers have never seen…ever.  It is only being made available to an exclusive list of vertical leading, millennial-facing brands.  But the applications are vast:
                       </p>
-                      <p>
-                        CPG<br />
-                        Apparel<br />
-                        Ticketing and Access<br />
-                        Product embellishment<br />
-                        Cards (rewards, credit, gift)<br />
-                        Labeling<br />
-                        Direct Marketing<br />
-                        Point of Sale<br />
-                      </p>
-
+                      <div class="exclusive-container">
+                            <div class="exclusive-container-left">
+                              <ul class="exclusive-list-style">
+                                  <li>CPG</li>
+                                  <li>Apparel</li>
+                                  <li>Ticketing and Access</li>
+                                  <li>Product embellishment</li>
+                                  </ul>
+                              </div>
+                            <div class="exclusive-container-right">
+                              <ul class="exclusive-list-style">
+                                  <li>Cards (rewards, credit, gift)</li>
+                                  <li>Labeling</li>
+                                  <li>Direct Marketing</li>
+                                  <li>Point of Sale</li>
+                              </ul>
+                            </div>
+                          </div>
                     </div>
                          <div class="clear"></div>
                          </div>
