added gif upon bryans request although not showing up yet

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ data-alt : the url of the image that will be shown as background of the homepage
 
 -->
 <div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/home2-bg.jpg">
+  <div class="header-gif">
+    <img src="images/home-header.gif" alt="headergif" height="400" width="400">
+  </div>
 
 
      <!-- White overlay ( feel free to remove ) -->
@@ -154,7 +157,6 @@ data-alt : the url of the image that will be shown as background of the homepage
                  <p class="welcomecolor">
                   Welcome to poptik
                  </p>
-
           </div>
 
 <!-- Kept Service Icons in just in case. -->
@@ -339,7 +341,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                                   <li>Apparel</li>
                                   <li>Ticketing and Access</li>
                                   <li>Product embellishment</li>
-                                  </ul>
+                                </ul>
                               </div>
                             <div class="exclusive-container-right">
                               <ul class="exclusive-list-style">
