added gif and cleaned up code

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ data-start : the starting position in seconds
 data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )
 
 -->
-<div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/home2-bg.jpg">
-  <div class="header-gif">
+<div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/beats.gif">
+  <!-- <div class="header-gif">
     <img src="images/home-header.gif" alt="headergif" height="400" width="400">
-  </div>
+  </div> -->
 
 
      <!-- White overlay ( feel free to remove ) -->
