changed email message to email address

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ data-alt : the url of the image that will be shown as background of the homepage
           <div class="hidden-element" id="hidden-phone-number">
             <p><a href="tel:+1-555-555-5555">1- 555 - 555 - 5555</a></p>
             <p>
-              <a href="mailto:explore@hellophonic.com" target="_top">EMAIL US</a>
+              <a href="mailto:explore@hellophonic.com" target="_top">explore@hellophonic.com</a>
             </p>
           </div>
 
