touched up lists in exclusive section

--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@ data-start : the starting position in seconds
 data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )
 
 -->
+<!-- <div class="header-gif">
+  <img src="images/home-header.gif" alt="headergif" height="400" width="400">
+  <h1>DISRUPT THE SHELF</h1>
+</div> -->
+
+
+
 <div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/home2-bg.jpg">
-  <div class="header-gif">
-    <img src="images/home-header.gif" alt="headergif" height="400" width="400">
-  </div>
 
-
-     <!-- White overlay ( feel free to remove ) -->
+    <!-- White overlay ( feel free to remove ) -->
      <div class="video-overlay"></div>
 
      <!-- Welcome -->
@@ -336,7 +339,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                       </p>
                       <div class="exclusive-container">
                             <div class="exclusive-container-left">
-                              <ul class="exclusive-list-style">
+                              <ul class="exclusive-list-style-left">
                                   <li>CPG</li>
                                   <li>Apparel</li>
                                   <li>Ticketing and Access</li>
@@ -344,7 +347,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                                 </ul>
                               </div>
                             <div class="exclusive-container-right">
-                              <ul class="exclusive-list-style">
+                              <ul class="exclusive-list-style-right">
                                   <li>Cards(rewards, credit, gift)</li>
                                   <li>Labeling</li>
                                   <li>Direct Marketing</li>
