updated header to home-header.gif

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ Some notes you migth find helpful:
 
 data-video : the id of the YouTube video ( if you have https://www.youtube.com/watch?v=2NvfYMyyNyo, the 2NvfYMyyNyo will be the id!  ). The theme supports YouTube videos only!
 data-start : the starting position in seconds
-data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )
+data-alt : the url of the image that will be shown as background of the homepage on devices that cannot display YouTube backgrounds ( mobile devices in general )-->
 
 
-<div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/beats.gif">
+<div id="introVideo" class="home2 video_bg" data-video="OO_euV3eMvY" data-start="" data-alt="images/home-header.gif">
 
     <!-- White overlay ( feel free to remove ) -->
      <div class="video-overlay"></div>
