switched out phrasing for header and updated 'make it pop' phrasing

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ data-alt : the url of the image that will be shown as background of the homepage
      <div class="welcome">
           <!-- Big Headline -->
           <div class="big-headline">
-               <h1>DISRUPT THE SHELF</h1>
+               <h1>CONSUMER DISRUPT</h1>
           </div>
 
           <!-- CTA Button -->
@@ -361,7 +361,7 @@ data-alt : the url of the image that will be shown as background of the homepage
     <!--- class for the pokadots to show --->
 
      <!-- Block Title -->
-     <h2 class="block-title">Make You Pop</h2>
+     <h2 class="block-title">EXPLORE POPTIK</h2>
      <p class="contact-intro">Contact us to begin a discussion about accessing Poptik for your brand</p>
 
      <!-- Buttons -->
