--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ data-alt : the url of the image that will be shown as background of the homepage
      <div class="welcome">
           <!-- Big Headline -->
           <div class="big-headline">
-               <h1>DISRUPT THE SHELF</h1>
+               <h1>CONSUMER DISRUPT</h1>
           </div>
 
           <!-- CTA Button -->
@@ -370,7 +370,7 @@ data-alt : the url of the image that will be shown as background of the homepage
     <!--- class for the pokadots to show --->
 
      <!-- Block Title -->
-     <h2 class="block-title">Make You Pop</h2>
+     <h2 class="block-title">Explore Poptik</h2>
      <p class="contact-intro">Contact us to begin a discussion about accessing Poptik for your brand</p>
 
      <!-- Buttons -->
