changed shimmer to shine in devices

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ data-alt : the url of the image that will be shown as background of the homepage
                         <!-- <div class="service-image-icon">
                              <img src="images/service_icons/motionpicture.png" alt="" />
                         </div> -->
-                        <h4>SHIMMER</h4>
+                        <h4>SHINE</h4>
                    </div>
            </div>
 
